# HW-Virtualization-and-Trust

./: Cargo.toml  README.md  config.toml  output.elf  output.hex
.cargo/: config.toml
src/: atmega.rs  esp32.rs  gpio.rs  i2c.rs  main.rs  main_test  main_test_spi.rs  spi.rs  usart.rs
src/atmega/: ard_gpio.rs  ard_i2c.rs  ard_spi.rs  ard_usart.rs
src/esp32/: esp_gpio.rs  esp_i2c.rs  esp_spi.rs  esp_usart.rs
src/gpio/: atmega328p.rs  cortex_m7.rs  mod.rs
src/spi/: atmega328p.rs  cortex_m7.rs  mod.rs
src/usart/: atmega328p.rs  cortex_m7.rs  main_exemple  mod.rs
src_esp/: gpio.rs  i2c.rs  main.rs  spi.rs  text.txt  usart.rs
